# dotfiles

./: .chezmoi.toml.tmpl  .chezmoiexternal.toml  .chezmoiignore  .gitignore  NOTES.md  README.md  REFACTORING_INSTRUCTION.md  TODO.md  dot_bashrc  dot_bashrc.tmpl  dot_tmux.conf.tmpl  flake.nix  install.py
.agent/: skill_ideas.md
assets/k8s/: rbac.yaml  simple-http-server.yaml
bash/: .bashrc
cargo/: .config
code/: install_extensions.py  keybindings.json  readme.md  settings.json  settings2.json
debuggings/: bun2nix-cache-entry-creator-fix.md  sway-slow-startup-batsignal.md
devices/: common_home.nix
devices/akanksha/: default.nix
devices/budla/: backup.nix  configuration.nix  k3s.nix  (+4 more)
firefox_extension/: surfing_keys.js
fish/: config.fish
git/: configure.py
hardware/: ovh_vps.nix
helix/: config.toml
home-manager/: README.md  TODO.md  flake.nix  home.nix  i3.nix  shell.nix
i3/: config
modules/: flake.nix
non_files/: yay_installs.sh
poetry/: configure.py
rclone/: rclone.conf
scripts/: build_iso.sh
softwares/markdown_lsp/: .gitignore  Cargo.toml  README.md  flake.nix
softwares/markdown_lsp/benches/: lsp_benches.rs
softwares/markdown_lsp/src/: analysis.rs  cli.rs  clipboard.rs  config.rs  document.rs  encoding.rs  fuzzy.rs  journal.rs  lib.rs  links.rs  main.rs  server.rs  uri.rs
softwares/markdown_lsp/src/features/: completion.rs  diagnostics.rs  document_link.rs  folding.rs  formatting.rs  hover.rs  lists.rs  mod.rs  navigation.rs  snippets.rs  symbols.rs  tables.rs
softwares/markdown_lsp/tests/: cli.rs  formatting.rs  lsp_integration.rs
softwares/radioctl/: Cargo.toml  flake.nix
softwares/radioctl/src/: bt.rs  main.rs  nm.rs
starship/: starship.toml
tests/: vm-debug.nix
tmux/: .tmux.conf
(+133 files in other folders)
