[package]
name = "markdown-lsp"
version = "0.1.0"
edition = "2021"
description = "A high-quality, configurable Markdown language server written in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/markdown-lsp"
readme = "README.md"

[lib]
name = "markdown_lsp"
path = "src/lib.rs"

[[bin]]
name = "markdown-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp-server = "0.23"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "sync", "time"] }
markdown = "1"
ropey = "1.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
percent-encoding = "2"
globset = "0.4"
dashmap = "6"
nucleo-matcher = "0.3.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# ripgrep's directory walker: respects .gitignore / .ignore / hidden files.
ignore = "0.4"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
serde_json = "1"
futures-util = "0.3"
criterion = "0.5"

[[bench]]
name = "lsp_benches"
harness = false

[profile.release]
lto = "thin"
