[package]
name = "radioctl"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.26"
crossterm = "0.27"
bluer = { version = "0.17", features = ["bluetoothd"] }
zbus = { version = "4", features = ["tokio"] }
zvariant = "4"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
tokio-stream = "0.1"
libc = "0.2"
